# invenio-requests

./: .editorconfig  .git-blame-ignore-revs  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  pytest.ini  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_requests/: __init__.py  actions.py  config.py  errors.py  ext.py  proxies.py  registry.py  tasks.py  version.py  views.py  webpack.py
invenio_requests/administration/user_moderation/: __init__.py  user_moderation.py
invenio_requests/alembic/: 5cd30a3503c9_create_requests_branch.py  a14fa442680f_create_tables.py
invenio_requests/customizations/: __init__.py  actions.py  event_types.py  request_types.py  states.py
invenio_requests/customizations/base/: __init__.py  actions.py  permissions.py  request_types.py  schema.py  states.py
invenio_requests/customizations/default/: __init__.py  actions.py  request_types.py
invenio_requests/customizations/user_moderation/: __init__.py  user_moderation.py
invenio_requests/notifications/: __init__.py  builders.py  filters.py  generators.py
invenio_requests/records/: __init__.py  actions.py  api.py  models.py  pidprovider.py  request_types.py  schema.py
invenio_requests/records/dumpers/: __init__.py  calculated.py  granttokens.py  request_types.py
invenio_requests/records/jsonschemas/: __init__.py
invenio_requests/records/jsonschemas/request_events/: event-v1.0.0.json
invenio_requests/records/jsonschemas/requestevents/: requestevent-v1.0.0.json
invenio_requests/records/jsonschemas/requests/: definitions-v1.0.0.json  request-v1.0.0.json
invenio_requests/records/mappings/: __init__.py
invenio_requests/records/mappings/os-v1/: __init__.py
invenio_requests/records/mappings/v6/: __init__.py
invenio_requests/records/mappings/v7/: __init__.py
invenio_requests/records/systemfields/: __init__.py  entity_reference.py  event_type.py  expired_state.py  identity.py  open_state.py  relatedrecord.py  request_state.py  request_type.py  status.py
invenio_requests/records/systemfields/calculated/: __init__.py  base.py  expired.py  open.py  state.py
invenio_requests/resolvers/: __init__.py  base.py  helpers.py  records.py  registry.py  requests.py  users.py
invenio_requests/resolvers/default/: __init__.py  records.py  requests.py  users.py
invenio_requests/resources/: __init__.py  fields.py  resource.py
invenio_requests/resources/events/: __init__.py  config.py  resource.py  resources.py
invenio_requests/resources/requests/: __init__.py  config.py  resource.py
invenio_requests/resources/user_moderation/: __init__.py  config.py  resource.py
invenio_requests/services/: __init__.py  config.py  configurator.py  generators.py  permissions.py  registry.py  results.py  schemas.py  services.py
invenio_requests/services/comments/: __init__.py  config.py  customization.py  results.py  service.py
invenio_requests/services/events/: __init__.py  config.py  customization.py  fields.py  service.py
invenio_requests/services/requests/: __init__.py  components.py  config.py  customization.py  facets.py  links.py  params.py  results.py  service.py
invenio_requests/services/user_moderation/: __init__.py  config.py  errors.py  service.py
invenio_requests/templates/invenio_requests/: base.html  index.html
invenio_requests/templates/semantic-ui/invenio_notifications/: comment-request-event.create.jinja
invenio_requests/translations/: messages.pot
invenio_requests/translations/af/LC_MESSAGES/: messages.po
invenio_requests/translations/ar/LC_MESSAGES/: messages.po
invenio_requests/translations/bg/LC_MESSAGES/: messages.po
invenio_requests/translations/ca/LC_MESSAGES/: messages.po
invenio_requests/translations/cs/LC_MESSAGES/: messages.po
invenio_requests/translations/da/LC_MESSAGES/: messages.po
invenio_requests/translations/de/LC_MESSAGES/: messages.po
invenio_requests/translations/de_AT/LC_MESSAGES/: messages.po
invenio_requests/translations/de_DE/LC_MESSAGES/: messages.po
invenio_requests/translations/el/LC_MESSAGES/: messages.po
invenio_requests/translations/en/LC_MESSAGES/: messages.po
invenio_requests/translations/en_AT/LC_MESSAGES/: messages.po
invenio_requests/translations/en_HU/LC_MESSAGES/: messages.po
invenio_requests/translations/es/LC_MESSAGES/: messages.po
invenio_requests/translations/es_CU/LC_MESSAGES/: messages.po
invenio_requests/translations/es_MX/LC_MESSAGES/: messages.po
invenio_requests/translations/et/LC_MESSAGES/: messages.po
invenio_requests/translations/et_EE/LC_MESSAGES/: messages.po
invenio_requests/translations/fa/LC_MESSAGES/: messages.po
invenio_requests/views/: __init__.py  api.py  decorators.py  requests.py  ui.py
tests/: conftest.py  test_alembic.py  test_invenio_requests.py  test_type_registry.py
tests/customizations/: test_request_types.py
tests/records/: test_request_api.py  test_request_numberseq.py  test_systemfield_relatedrecord.py
tests/records/events/: test_api.py
tests/records/systemfields/: test_calculated_systemfield.py
tests/resources/events/: conftest.py  test_request_events_resources.py
tests/resources/requests/: conftest.py  test_requests_resources.py
tests/resources/user_moderation/: test_user_moderation_resources.py
tests/services/: conftest.py
tests/services/comments/: conftest.py  test_comments_service_config.py  test_comments_services.py
tests/services/events/: conftest.py  test_event_permissions.py  test_request_events_service.py  test_request_events_service_config.py
tests/services/requests/: test_request_permissions.py  test_request_search_permissions.py  test_requests_schemas.py  test_requests_service.py  test_requests_service_config.py  test_requests_tasks.py
tests/services/user_moderation/: test_user_moderation_service.py
(+223 files in other folders)
