# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 CERN.
#
# Invenio-Requests is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-requests
version = attr: invenio_requests.__version__
description = "Invenio module for generic and customizable requests."
long_description = file: README.rst, CHANGES.rst
keywords = invenio requests
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-requests
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    invenio-records-resources>=0.19.12,<0.20.0
    invenio-theme>=1.3.11
    invenio-users-resources>=0.1.5,<0.2.0

[options.extras_require]
tests =
    black>=20.8b1
    invenio-app>=1.3.2
    invenio-db[postgresql,mysql,versioning]>=1.0.13,<2.0
    pytest-invenio>=1.4.3
    sphinx>=4.2.0,<5
elasticsearch6 =
    invenio-search[elasticsearch6]>=1.4.2,<2.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=1.4.2,<2.0

[options.entry_points]
invenio_base.apps =
    invenio_requests = invenio_requests:InvenioRequests
invenio_base.api_apps =
    invenio_requests = invenio_requests:InvenioRequests
invenio_base.blueprints =
    invenio_requests = invenio_requests.views:create_ui_blueprint
invenio_base.api_blueprints =
    invenio_requests = invenio_requests.views:create_requests_bp
    invenio_request_events = invenio_requests.views:create_request_events_bp
invenio_db.alembic =
    invenio_requests = invenio_requests:alembic
invenio_db.models =
    invenio_requests = invenio_requests.records.models
invenio_jsonschemas.schemas =
    jsonschemas = invenio_requests.records.jsonschemas
invenio_search.mappings =
    requests = invenio_requests.records.mappings
    requestevents = invenio_requests.records.mappings
invenio_i18n.translations =
    messages = invenio_requests
invenio_assets.webpack =
    invenio_requests = invenio_requests.webpack:requests

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
ignore = E203,W503
max-line-length = 88
exclude = docs/conf.py

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
max-line-length = 88

[compile_catalog]
directory = invenio_requests/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_requests/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_requests/translations/messages.pot
output-dir = invenio_requests/translations/

[update_catalog]
input-file = invenio_requests/translations/messages.pot
output-dir = invenio_requests/translations/
